[package]
name = "gcp_auth"
version = "0.7.2"
repository = "https://github.com/hrvolapeter/gcp_auth"
description = "Google cloud platform (GCP) authentication using default and custom service accounts"
documentation = "https://docs.rs/gcp_auth/"
keywords = ["authentication", "gcp", "google"]
categories = ["asynchronous", "authentication"]
readme = "README.md"
license = "MIT"
edition = "2018"

[features]
default = ["hyper-rustls/rustls-native-certs"]
webpki-roots = ["hyper-rustls/webpki-roots"]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
dirs-next = "2.0"
hyper = { version = "0.14.2", features = ["client", "runtime", "http2"] }
hyper-rustls = { version = "0.23.0", default-features = false, features = ["native-tokio", "http1", "http2"] }
ring = "0.16.20"
rustls = "0.20.2"
rustls-pemfile = "1.0.0"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3.5", features = ["serde"] }
tokio = { version = "1.1", features = ["fs", "sync"] }
tracing = "0.1.29"
tracing-futures = "0.2.5"
url = "2"
which = "4.2"

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1.1", features = ["macros", "parking_lot", "rt-multi-thread"] }
