[package]
name = "gcp_auth"
version = "0.11.0"
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/hrvolapeter/gcp_auth"
description = "Google cloud platform (GCP) authentication using default and custom service accounts"
documentation = "https://docs.rs/gcp_auth/"
keywords = ["authentication", "gcp", "google"]
categories = ["asynchronous", "authentication"]
readme = "README.md"
license = "MIT"

[features]
default = ["hyper-rustls/rustls-native-certs"]
webpki-roots = ["hyper-rustls/webpki-roots"]

[dependencies]
async-trait = "0.1"
base64 = "0.21"
chrono = { version = "0.4.31", features = ["serde"] }
home = "0.5.5"
hyper = { version = "0.14.2", features = ["client", "runtime", "http2"] }
hyper-rustls = { version = "0.25", default-features = false, features = ["http1", "http2", "ring", "tokio-runtime"] }
ring = "0.17"
rustls = "0.22"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.1", features = ["fs", "sync"] }
tracing = "0.1.29"
tracing-futures = "0.2.5"
url = "2"
which = "6.0"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1.1", features = ["macros", "parking_lot", "rt-multi-thread"] }
